Добавлены иконки и фон для героя

--- a/index.html
+++ b/index.html
@@ -44,14 +44,25 @@
 
         <ul class="contacts list-decor">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="contacts-link link-decor"
-              >info@devstudio.com</a
+            <a
+              href="mailto:info@devstudio.com"
+              class="contacts-link link-decor"
             >
+              <svg class="envelope">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+
+              info@devstudio.com
+            </a>
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="contacts-link link-decor"
-              >+38 096 111 11 11</a
-            >
+            <a href="tel:+380961111111" class="contacts-link link-decor">
+              <svg class="smartphone">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -77,6 +88,12 @@
 
           <ul class="list-decor flex-qualities">
             <li class="item">
+              <div class="item-antenna">
+                <svg class="antenna">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
+
               <h3 class="quality-hdr">Внимание к деталям</h3>
 
               <p class="quality-dscrpt">
@@ -86,6 +103,12 @@
             </li>
 
             <li class="item">
+              <div class="item-clock">
+                <svg class="clock">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
+
               <h3 class="quality-hdr">Пунктуальность</h3>
 
               <p class="quality-dscrpt">
@@ -95,6 +118,12 @@
             </li>
 
             <li class="item">
+              <div class="item-diagram">
+                <svg class="diagram">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
+
               <h3 class="quality-hdr">Планирование</h3>
 
               <p class="quality-dscrpt">
@@ -104,6 +133,12 @@
             </li>
 
             <li class="item">
+              <div class="item-astronaut">
+                <svg class="astronaut">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
+
               <h3 class="quality-hdr">Современные технологии</h3>
 
               <p class="quality-dscrpt">
@@ -162,6 +197,37 @@
                 <h3 class="team-person-hdr">Игорь Демьяненко</h3>
 
                 <p class="team-person-dscrpt">Product Designer</p>
+
+                <ul class="social-list list-decor">
+                  <li class="social-item">
+                    <button class="social-button">
+                      <svg class="instagram" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li class="social-item">
+                    <button class="social-button">
+                      <svg class="twitter" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li class="social-item">
+                    <button class="social-button">
+                      <svg class="facebook" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li class="social-item">
+                    <button class="social-button">
+                      <svg class="linkedin" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -171,6 +237,37 @@
                 <h3 class="team-person-hdr">Ольга Репина</h3>
 
                 <p class="team-person-dscrpt">Frontend Developer</p>
+
+                <ul class="social-list list-decor">
+                  <li class="social-item">
+                    <button class="social-button">
+                      <svg class="instagram" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li class="social-item">
+                    <button class="social-button">
+                      <svg class="twitter" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li class="social-item">
+                    <button class="social-button">
+                      <svg class="facebook" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li class="social-item">
+                    <button class="social-button">
+                      <svg class="linkedin" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -184,6 +281,37 @@
                 <h3 class="team-person-hdr">Николай Тарасов</h3>
 
                 <p class="team-person-dscrpt">Marketing</p>
+
+                <ul class="social-list list-decor">
+                  <li class="social-item">
+                    <button class="social-button">
+                      <svg class="instagram" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li class="social-item">
+                    <button class="social-button">
+                      <svg class="twitter" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li class="social-item">
+                    <button class="social-button">
+                      <svg class="facebook" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li class="social-item">
+                    <button class="social-button">
+                      <svg class="linkedin" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -197,6 +325,100 @@
                 <h3 class="team-person-hdr">Михаил Ермаков</h3>
 
                 <p class="team-person-dscrpt">UI Designer</p>
+
+                <ul class="social-list list-decor">
+                  <li class="social-item">
+                    <button class="social-button">
+                      <svg class="instagram" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li class="social-item">
+                    <button class="social-button">
+                      <svg class="twitter" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li class="social-item">
+                    <button class="social-button">
+                      <svg class="facebook" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li class="social-item">
+                    <button class="social-button">
+                      <svg class="linkedin" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="clients section">
+        <div class="container">
+          <h2 class="clients-hdr">Постоянные клиенты</h2>
+
+          <ul class="clients-list list-decor">
+            <li class="item">
+              <div class="logo-div">
+                <a href="#" class="link">
+                  <svg class="logo">
+                    <use href="./images/icons.svg#icon-Logo"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="item">
+              <div class="logo-div">
+                <a href="#" class="link">
+                  <svg class="logo-1">
+                    <use href="./images/icons.svg#icon-Logo-1"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="item">
+              <div class="logo-div">
+                <a href="#" class="link">
+                  <svg class="logo-2">
+                    <use href="./images/icons.svg#icon-Logo-2"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="item">
+              <div class="logo-div">
+                <a href="#" class="link">
+                  <svg class="logo-3">
+                    <use href="./images/icons.svg#icon-Logo-3"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="item">
+              <div class="logo-div">
+                <a href="#" class="link">
+                  <svg class="logo-4">
+                    <use href="./images/icons.svg#icon-Logo-4"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="item">
+              <div class="logo-div">
+                <a href="#" class="link">
+                  <svg class="logo-5">
+                    <use href="./images/icons.svg#icon-Logo-5"></use>
+                  </svg>
+                </a>
               </div>
             </li>
           </ul>
@@ -211,6 +433,41 @@
           <span class="logo-web-ftr">Web</span
           ><span class="logo-studio-ftr">Studio</span>
         </a>
+
+        <div class="social-ftr-index">
+          <h2 class="social-hdr-ftr">Присоединяйтесь</h2>
+
+          <ul class="social-list-ftr list-decor">
+            <li class="social-item">
+              <button class="social-button-ftr">
+                <svg class="instagram" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-instagram-1"></use>
+                </svg>
+              </button>
+            </li>
+            <li class="social-item">
+              <button class="social-button-ftr">
+                <svg class="twitter" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </button>
+            </li>
+            <li class="social-item">
+              <button class="social-button-ftr">
+                <svg class="facebook" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </button>
+            </li>
+            <li class="social-item">
+              <button class="social-button-ftr">
+                <svg class="linkedin" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </button>
+            </li>
+          </ul>
+        </div>
 
         <address>
           <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
