--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -32,7 +32,9 @@
               <a href="../index.html" class="nav-link link-decor">Студия</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="nav-link link-decor"
+              <a
+                href="./portfolio.html"
+                class="nav-link current-page link-decor"
                 >Портфолио</a
               >
             </li>
@@ -76,7 +78,9 @@
 
           <ul class="filter list-decor">
             <li class="item">
-              <button type="button" class="filter-btn">Все</button>
+              <button type="button" class="filter-btn current-filter">
+                Все
+              </button>
             </li>
             <li class="item">
               <button type="button" class="filter-btn">Веб-сайты</button>
@@ -95,7 +99,7 @@
           <!-- Проекты -->
           <ul class="projects list-decor">
             <li class="item">
-              <article class="card">
+              <a class="card">
                 <div class="card-thumb">
                   <img
                     class="card-img"
@@ -110,11 +114,11 @@
 
                   <p class="project-dscrpt">Веб-сайт</p>
                 </div>
-              </article>
+              </a>
             </li>
 
             <li class="item">
-              <article class="card">
+              <a class="card">
                 <div class="card-thumb">
                   <img
                     class="card-img"
@@ -131,11 +135,11 @@
 
                   <p class="project-dscrpt">Дизайн</p>
                 </div>
-              </article>
+              </a>
             </li>
 
             <li class="item">
-              <article class="card">
+              <a class="card">
                 <div class="card-thumb">
                   <img
                     class="card-img"
@@ -150,11 +154,11 @@
 
                   <p class="project-dscrpt">Приложение</p>
                 </div>
-              </article>
+              </a>
             </li>
 
             <li class="item">
-              <article class="card">
+              <a class="card">
                 <div class="card-thumb">
                   <img
                     class="card-img"
@@ -169,11 +173,11 @@
 
                   <p class="project-dscrpt">Маркетинг</p>
                 </div>
-              </article>
+              </a>
             </li>
 
             <li class="item">
-              <article class="card">
+              <a class="card">
                 <div class="card-thumb">
                   <img
                     class="card-img"
@@ -188,11 +192,11 @@
 
                   <p class="project-dscrpt">Приложение</p>
                 </div>
-              </article>
+              </a>
             </li>
 
             <li class="item">
-              <article class="card">
+              <a class="card">
                 <div class="card-thumb">
                   <img
                     class="card-img"
@@ -209,11 +213,11 @@
 
                   <p class="project-dscrpt">Веб-сайт</p>
                 </div>
-              </article>
+              </a>
             </li>
 
             <li class="item">
-              <article class="card">
+              <a class="card">
                 <div class="card-thumb">
                   <img
                     class="card-img"
@@ -228,11 +232,11 @@
 
                   <p class="project-dscrpt">Дизайн</p>
                 </div>
-              </article>
+              </a>
             </li>
 
             <li class="item">
-              <article class="card">
+              <a class="card">
                 <div class="card-thumb">
                   <img
                     class="card-img"
@@ -247,11 +251,11 @@
 
                   <p class="project-dscrpt">Маркетинг</p>
                 </div>
-              </article>
+              </a>
             </li>
 
             <li class="item">
-              <article class="card">
+              <a class="card">
                 <div class="card-thumb">
                   <img
                     class="card-img"
@@ -266,7 +270,7 @@
 
                   <p class="project-dscrpt">Приложение</p>
                 </div>
-              </article>
+              </a>
             </li>
           </ul>
         </div>
@@ -286,28 +290,28 @@
 
           <ul class="social-list-ftr list-decor">
             <li class="social-item">
-              <button class="social-button-ftr">
+              <button class="social-link-ftr">
                 <svg class="instagram" width="20px" height="20px">
                   <use href="../images/icons.svg#icon-instagram-1"></use>
                 </svg>
               </button>
             </li>
             <li class="social-item">
-              <button class="social-button-ftr">
+              <button class="social-link-ftr">
                 <svg class="twitter" width="20px" height="20px">
                   <use href="../images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </button>
             </li>
             <li class="social-item">
-              <button class="social-button-ftr">
+              <button class="social-link-ftr">
                 <svg class="facebook" width="20px" height="20px">
                   <use href="../images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </button>
             </li>
             <li class="social-item">
-              <button class="social-button-ftr">
+              <button class="social-link-ftr">
                 <svg class="linkedin" width="20px" height="20px">
                   <use href="../images/icons.svg#icon-linkedin-1"></use>
                 </svg>
