--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
           <ul class="nav-list list-decor">
             <li class="item">
-              <a href="./index.html" class="nav-link link-decor">Студия</a>
+              <a href="./index.html" class="nav-link current-page link-decor"
+                >Студия</a
+              >
             </li>
             <li class="item">
               <a href="./pages/portfolio.html" class="nav-link link-decor"
@@ -200,32 +202,35 @@
 
                 <ul class="social-list list-decor">
                   <li class="social-item">
-                    <button class="social-button">
+                    <a class="social-link">
                       <svg class="instagram" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-instagram-1"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
+
                   <li class="social-item">
-                    <button class="social-button">
+                    <a class="social-link">
                       <svg class="twitter" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
+
                   <li class="social-item">
-                    <button class="social-button">
+                    <a class="social-link">
                       <svg class="facebook" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
+
                   <li class="social-item">
-                    <button class="social-button">
+                    <a class="social-link">
                       <svg class="linkedin" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -240,32 +245,35 @@
 
                 <ul class="social-list list-decor">
                   <li class="social-item">
-                    <button class="social-button">
+                    <a class="social-link">
                       <svg class="instagram" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-instagram-1"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
+
                   <li class="social-item">
-                    <button class="social-button">
+                    <a class="social-link">
                       <svg class="twitter" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
+
                   <li class="social-item">
-                    <button class="social-button">
+                    <a class="social-link">
                       <svg class="facebook" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
+
                   <li class="social-item">
-                    <button class="social-button">
+                    <a class="social-link">
                       <svg class="linkedin" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -284,32 +292,35 @@
 
                 <ul class="social-list list-decor">
                   <li class="social-item">
-                    <button class="social-button">
+                    <a class="social-link">
                       <svg class="instagram" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-instagram-1"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
+
                   <li class="social-item">
-                    <button class="social-button">
+                    <a class="social-link">
                       <svg class="twitter" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
+
                   <li class="social-item">
-                    <button class="social-button">
+                    <a class="social-link">
                       <svg class="facebook" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
+
                   <li class="social-item">
-                    <button class="social-button">
+                    <a class="social-link">
                       <svg class="linkedin" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -328,32 +339,35 @@
 
                 <ul class="social-list list-decor">
                   <li class="social-item">
-                    <button class="social-button">
+                    <a class="social-link">
                       <svg class="instagram" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-instagram-1"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
+
                   <li class="social-item">
-                    <button class="social-button">
+                    <a class="social-link">
                       <svg class="twitter" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
+
                   <li class="social-item">
-                    <button class="social-button">
+                    <a class="social-link">
                       <svg class="facebook" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
+
                   <li class="social-item">
-                    <button class="social-button">
+                    <a class="social-link">
                       <svg class="linkedin" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -362,64 +376,58 @@
         </div>
       </section>
 
+      <!-- Клиенты -->
       <section class="clients section">
         <div class="container">
           <h2 class="clients-hdr">Постоянные клиенты</h2>
 
           <ul class="clients-list list-decor">
             <li class="item">
-              <div class="logo-div">
-                <a href="#" class="link">
-                  <svg class="logo">
-                    <use href="./images/icons.svg#icon-Logo"></use>
-                  </svg>
-                </a>
-              </div>
+              <a href="#" class="link">
+                <svg class="logo">
+                  <use href="./images/icons.svg#icon-Logo"></use>
+                </svg>
+              </a>
             </li>
+
             <li class="item">
-              <div class="logo-div">
-                <a href="#" class="link">
-                  <svg class="logo-1">
-                    <use href="./images/icons.svg#icon-Logo-1"></use>
-                  </svg>
-                </a>
-              </div>
+              <a href="#" class="link">
+                <svg class="logo-1">
+                  <use href="./images/icons.svg#icon-Logo-1"></use>
+                </svg>
+              </a>
             </li>
+
             <li class="item">
-              <div class="logo-div">
-                <a href="#" class="link">
-                  <svg class="logo-2">
-                    <use href="./images/icons.svg#icon-Logo-2"></use>
-                  </svg>
-                </a>
-              </div>
+              <a href="#" class="link">
+                <svg class="logo-2">
+                  <use href="./images/icons.svg#icon-Logo-2"></use>
+                </svg>
+              </a>
             </li>
+
             <li class="item">
-              <div class="logo-div">
-                <a href="#" class="link">
-                  <svg class="logo-3">
-                    <use href="./images/icons.svg#icon-Logo-3"></use>
-                  </svg>
-                </a>
-              </div>
+              <a href="#" class="link">
+                <svg class="logo-3">
+                  <use href="./images/icons.svg#icon-Logo-3"></use>
+                </svg>
+              </a>
             </li>
+
             <li class="item">
-              <div class="logo-div">
-                <a href="#" class="link">
-                  <svg class="logo-4">
-                    <use href="./images/icons.svg#icon-Logo-4"></use>
-                  </svg>
-                </a>
-              </div>
+              <a href="#" class="link">
+                <svg class="logo-4">
+                  <use href="./images/icons.svg#icon-Logo-4"></use>
+                </svg>
+              </a>
             </li>
+
             <li class="item">
-              <div class="logo-div">
-                <a href="#" class="link">
-                  <svg class="logo-5">
-                    <use href="./images/icons.svg#icon-Logo-5"></use>
-                  </svg>
-                </a>
-              </div>
+              <a href="#" class="link">
+                <svg class="logo-5">
+                  <use href="./images/icons.svg#icon-Logo-5"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -439,32 +447,35 @@
 
           <ul class="social-list-ftr list-decor">
             <li class="social-item">
-              <button class="social-button-ftr">
+              <a class="social-link-ftr">
                 <svg class="instagram" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-instagram-1"></use>
                 </svg>
-              </button>
+              </a>
             </li>
+
             <li class="social-item">
-              <button class="social-button-ftr">
+              <a class="social-link-ftr">
                 <svg class="twitter" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
-              </button>
+              </a>
             </li>
+
             <li class="social-item">
-              <button class="social-button-ftr">
+              <a class="social-link-ftr">
                 <svg class="facebook" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
-              </button>
+              </a>
             </li>
+
             <li class="social-item">
-              <button class="social-button-ftr">
+              <a class="social-link-ftr">
                 <svg class="linkedin" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
-              </button>
+              </a>
             </li>
           </ul>
         </div>
