--- a/index.html
+++ b/index.html
@@ -436,11 +436,30 @@
 
     <!-- Футер -->
     <footer class="footer">
-      <div class="container">
-        <a class="logotype-ftr link-decor" href="./index.html" lang="en">
-          <span class="logo-web-ftr">Web</span
-          ><span class="logo-studio-ftr">Studio</span>
-        </a>
+      <div class="container footer-container">
+        <div class="address-div">
+          <a class="logotype-ftr link-decor" href="./index.html" lang="en">
+            <span class="logo-web-ftr">Web</span
+            ><span class="logo-studio-ftr">Studio</span>
+          </a>
+
+          <address>
+            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+
+            <ul class="contacts-ftr list-decor">
+              <li class="item">
+                <a href="mailto:info@devstudio.com" class="mail-ftr link-decor"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="item">
+                <a href="tel:+380961111111" class="phone-ftr link-decor"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
 
         <div class="social-ftr-index">
           <h2 class="social-hdr-ftr">Присоединяйтесь</h2>
@@ -479,23 +498,6 @@
             </li>
           </ul>
         </div>
-
-        <address>
-          <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-
-          <ul class="contacts-ftr list-decor">
-            <li class="item">
-              <a href="mailto:info@devstudio.com" class="mail-ftr link-decor"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="item">
-              <a href="tel:+380961111111" class="phone-ftr link-decor"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
       </div>
     </footer>
   </body>
