--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -279,63 +279,68 @@
 
     <!-- Футер -->
     <footer class="footer">
-      <div class="container">
-        <a class="logotype-ftr link-decor" href="./index.html" lang="en">
-          <span class="logo-web-ftr">Web</span
-          ><span class="logo-studio-ftr">Studio</span>
-        </a>
+      <div class="container footer-container">
+        <div class="address-div">
+          <a class="logotype-ftr link-decor" href="./index.html" lang="en">
+            <span class="logo-web-ftr">Web</span
+            ><span class="logo-studio-ftr">Studio</span>
+          </a>
 
-        <div class="social-ftr-portfolio">
+          <address>
+            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+
+            <ul class="contacts-ftr list-decor">
+              <li class="item">
+                <a href="mailto:info@devstudio.com" class="mail-ftr link-decor"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="item">
+                <a href="tel:+380961111111" class="phone-ftr link-decor"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <div class="social-ftr-index">
           <h2 class="social-hdr-ftr">Присоединяйтесь</h2>
 
           <ul class="social-list-ftr list-decor">
             <li class="social-item">
-              <button class="social-link-ftr">
+              <a class="social-link-ftr">
                 <svg class="instagram" width="20px" height="20px">
                   <use href="../images/icons.svg#icon-instagram-1"></use>
                 </svg>
-              </button>
+              </a>
             </li>
+
             <li class="social-item">
-              <button class="social-link-ftr">
+              <a class="social-link-ftr">
                 <svg class="twitter" width="20px" height="20px">
                   <use href="../images/icons.svg#icon-twitter-1"></use>
                 </svg>
-              </button>
+              </a>
             </li>
+
             <li class="social-item">
-              <button class="social-link-ftr">
+              <a class="social-link-ftr">
                 <svg class="facebook" width="20px" height="20px">
                   <use href="../images/icons.svg#icon-facebook-1"></use>
                 </svg>
-              </button>
+              </a>
             </li>
+
             <li class="social-item">
-              <button class="social-link-ftr">
+              <a class="social-link-ftr">
                 <svg class="linkedin" width="20px" height="20px">
                   <use href="../images/icons.svg#icon-linkedin-1"></use>
                 </svg>
-              </button>
+              </a>
             </li>
           </ul>
         </div>
-
-        <address>
-          <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-
-          <ul class="contacts-ftr list-decor">
-            <li class="item">
-              <a href="mailto:info@devstudio.com" class="mail-ftr link-decor"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="item">
-              <a href="tel:+380961111111" class="phone-ftr link-decor"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
       </div>
     </footer>
   </body>
